fix #119: context menu on mobile should not autoclose

--- a/src/info-bar/InfoBar.css
+++ b/src/info-bar/InfoBar.css
@@ -4,7 +4,7 @@
 	align-items: flex-start;
 	justify-content: flex-start;
 	gap: 0.5rem;
-	padding: 0.4rem 0.6rem 0.4rem 0.4rem;
+	padding: 0.4rem 0.6rem 0.4rem 0.3rem;
 	margin: 0 0 0.75rem;
 	border-radius: var(--ui-border-radius);
 	border-width: 1px;
