--- a/src/input/input-search/InputSearch.css
+++ b/src/input/input-search/InputSearch.css
@@ -1,1 +1,2 @@
 .input-search input { padding-left: 38px; }
+.input-search .input-row>.icon { top: 1px; }
